hphp/hack/test/typecheck/deprecated_attr_bad_arity.php.exp
File "deprecated_attr_bad_arity.php", line 3, characters 3-14:
The attribute __Deprecated expects 1 parameters (Typing[4126])
