hphp/hack/test/typecheck/deprecated_attr_bad_arity.php
<?hh

<<__Deprecated>>
function f() {}
